src/main/resources/api/examples/errors/error-example-422.raml
#%RAML 1.0 NamedExample
values:
  message: Unprocessable Entity